manifests/overlays/staging/class-management-class-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-deployment
  labels:
    app: class-management-class-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-class-service
  template:
    metadata:
      labels:
        app: class-management-class-service
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-class-service-container
          image: harbor.th1enlm02.live/staging/class-management-class-service:76048b5-1734260294 # {"$imagepolicy": "staging:class-service-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
