manifests/overlays/staging/class-management-class-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-service-ingress
spec:
  rules:
  - host: stag-class-api.th1enlm02.live
